--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </a>
         <div class="nav-right">
             <a class="zdjecie" href="#home">
-                <img src="home_pic.webp" alt="Doomek">
+                <img src="home_pic.webp" alt="Dooomek">
             </a>
             <a class="zdjecie" href="#x">
                 <img src="x.avif" alt="x">
