--- a/index.html
+++ b/index.html
@@ -7,14 +7,37 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="topnav">
+        <a class="akali3" href="#cat">
+            <img src="akali3.png" alt="Akali Logo">
+        </a>
+        <div class="nav-right">
+            <a class="zdjecie" href="#home">
+                <img src="home_pic.webp" alt="Dooooomek">
+            </a>
+            <a class="zdjecie" href="#x">
+                <img src="x.avif" alt="x">
+            </a>
+            <a class="zdjecie" href="#insta">
+                <img src="insta.webp" alt="insta">
+            </a>
+            <a class="zdjecie" href="#discord">
+                <img src="discord.jpg" alt="discord">
+            </a>
+            <a class="zdjecie" href="#telegram">
+                <img src="telegram.webp" alt="telegram">
+            </a>
+        </div>
+    </div>
     <div class="image-container">
         <img src="akali.png" alt="Cat">
     </div>
-    <div class="buttons">
-        <button id="ca-button" onclick="navigator.clipboard.writeText('73297fdsfsdhjf3232323')">CA</button>
-        <button onclick="window.location.href='https://discord.gg/hApbGvGj'">Discord</button>
-        <button onclick="window.location.href='https://web.telegram.org/a/'">Telegram</button>
+    <div class="video-container">
+        <video id="myVideo" width="500" height="500" muted>
+            <source src="gif.mp4" type="video/mp4">
+        </video> 
     </div>
     <script src="script.js"></script>
 </body>
 </html>
+
