--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <img src="x.avif" alt="x">
             </a>
             <a class="zdjecie" href="#insta">
-                <img src="insta.webp" alt="insta">
+                <img src="insta.webp" alt="insta"> 
             </a>
             <a class="zdjecie" href="#discord">
                 <img src="discord.jpg" alt="discord">
@@ -31,6 +31,9 @@
     </div>
     <div class="image-container">
         <img src="akali.png" alt="Cat">
+    </div>
+    <div class="question_mark">
+        <img src="pytajnik.jpg" alt="?">
     </div>
     <div class="video-container">
         <video id="myVideo" width="500" height="500" muted>
