--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
     <div class="topnav">
         <a class="akali3" href="#cat">
-            <img src="akali3.png" alt="Akali Logo">
+            <img class="akali3" src="akali3.png" alt="Akali Logo">
         </a>
+        <button class="guzik" onclick="window.open('https://www.youtube.com')">BUY $AKALI</button>  
         <div class="nav-right">
             <a class="zdjecie" href="#home">
                 <img src="home_pic.webp" alt="Dooooomek">
