serduszko on click

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="topnav">      
-        <a class="akali3" href="#cat" onmouseover="showHeart(event)" onmouseout="hideHeart()">
+        <a class="akali3" href="#cat" onmouseover="showHeart(event)" onmouseout="hideHeart()" onclick="createFlyingHeart(event)">
             <img class="akali3" src="akali3.png" alt="Akali Logo">
         </a>
         <img id="heartGif" src="serce.gif" alt="Heart Animation" style="position: absolute; display: none">
