big photo to the right

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a class="zdjecie" href="https://x.com/home" target="_blank">
                 <img src="x.avif" alt="x">
             </a>
-            <a class="zdjecie" href="https://www.instagram.com/" target="_blank">
+            <a class="zdjecie" href="https://www.instagram.com/akalinajpiekniejszakicia/" target="_blank">
                 <img src="insta.webp" alt="insta"> 
             </a>
             <a class="zdjecie" href="https://discord.com" target="_blank">
