some mobile reponsiveness

--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
     <div class="image-container">
         <img src="akali.png" alt="Cat">
     </div>
+    <div class="text-container">
+        <p>Cat with hat</p>
+        <p>Dog with hat</p>
+        <p>The sun dipped below the horizon</p>
+        <p>A gentle breeze rustled through the trees</p>
+        <p>She glanced at the old photograph</p>
+        <p>The city lights flickered like stars</p>
+        <p>Footsteps echoed in the empty alley</p>
+        <p>A distant train whistle broke the silence</p>
+        <p>The scent of fresh rain lingered in the air</p>
+        <p>Pages of an open book fluttered</p>
+    </div>    
     <div class="question_mark">
         <img src="pytajnik.jpg" alt="?">
     </div>
