ramka na srodku

--- a/index.html
+++ b/index.html
@@ -36,17 +36,23 @@
         <img src="akali.png" alt="Cat">
     </div>
     <div class="text-container">
-        <p>Cat with hat</p>
-        <p>Dog with hat</p>
-        <p>The sun dipped below the horizon</p>
-        <p>A gentle breeze rustled through the trees</p>
-        <p>She glanced at the old photograph</p>
-        <p>The city lights flickered like stars</p>
-        <p>Footsteps echoed in the empty alley</p>
-        <p>A distant train whistle broke the silence</p>
-        <p>The scent of fresh rain lingered in the air</p>
-        <p>Pages of an open book fluttered</p>
-    </div>    
+        <p>😺 Hi! My name is <b>Akali</b></p>
+        <p>🐱 I am new to the memecoin community</p>
+        <p>💻 I was created by a single developer.</p>
+        <h3>About the Developer</h3>
+        <p>👨‍💻 I'm a 20-year-old IT student from Poland.</p>
+        <p>🚀 My goal? To beat <b>$DOGE</b> or hit <b>at least 1mil$ MC</b></p>
+        <p>🐾 I <b>believe</b> cats are superior to dogs! 😼</p>
+        <p>🌟 This is my long-term project.</p>
+        <p>🛠 I started making this website on <b>Feb 1, 2025</b>.</p>
+        <p>🙏 I'd be <b>very grateful</b> for everyone who supports this journey! 🐈</p>
+    
+        <!-- Contract Address Section -->
+        <div class="contract-address">
+            <span class="ca-label">CA:</span>
+            <span class="ca-value" id="contract-address" onclick="copyToClipboard();createFlyingGCheck(event)">FxGPLSVD75jur2XoUTiW9b8MdxMQfJYR5Kv8QkpvsqtF</span>
+        </div>
+    </div> 
     <div class="question_mark">
         <img src="pytajnik.jpg" alt="?">
     </div>
