--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     </div>
     <div class="text-container">
         <p>😺 Hi! My name is <b>Akali</b></p>
+        <p>🐱 I am a real life cat</p>
         <p>🐱 I am new to the memecoin community</p>
         <p>💻 I was created by a single developer.</p>
         <h3>About the Developer</h3>
