trying the footer

--- a/index.html
+++ b/index.html
@@ -24,9 +24,6 @@
             <a class="zdjecie" href="https://www.instagram.com/akalinajpiekniejszakicia/" target="_blank">
                 <img src="insta.webp" alt="insta"> 
             </a>
-            <a class="zdjecie" href="https://discord.com" target="_blank">
-                <img src="discord.jpg" alt="discord">
-            </a>
             <a class="zdjecie" href="https://web.telegram.org/a/" target="_blank">
                 <img src="telegram.webp" alt="telegram">
             </a>
@@ -37,7 +34,7 @@
     </div>
     <div class="text-container">
         <p>😺 Hi! My name is <b>Akali</b></p>
-        <p>🐱 I am a real life cat</p>
+        <p>🐱 I am a real cat</p>
         <p>🐱 I am new to the memecoin community</p>
         <p>💻 I was created by a single developer.</p>
         <h3>About the Developer</h3>
@@ -54,6 +51,7 @@
             <span class="ca-value" id="contract-address" onclick="copyToClipboard();createFlyingGCheck(event)">FxGPLSVD75jur2XoUTiW9b8MdxMQfJYR5Kv8QkpvsqtF</span>
         </div>
     </div> 
+    <!--
     <div class="question_mark">
         <img src="pytajnik.jpg" alt="?">
     </div>
@@ -62,7 +60,23 @@
             <source src="gif.mp4" type="video/mp4">
         </video> 
     </div>
+    -->
     <script src="script.js"></script>
+    <div class="footer-container">
+        <div class="footer">
+            <div class="guziki">
+                <a class="zdjecie" href="https://x.com/home" target="_blank">
+                    <img src="x.avif" alt="x">
+                </a>
+                <a class="zdjecie" href="https://www.instagram.com/akalinajpiekniejszakicia/" target="_blank">
+                    <img src="insta.webp" alt="insta"> 
+                </a>
+                <a class="zdjecie" href="https://web.telegram.org/a/" target="_blank">
+                    <img src="telegram.webp" alt="telegram">
+                </a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
 
