--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                 <a class="zdjecie" href="https://web.telegram.org/a/" target="_blank">
                     <img src="telegram.webp" alt="telegram">
                 </a>
+                <p class="copyr">© 2025 akali</p>
             </div>
         </div>
     </div>
