--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img id="heartGif" src="serce.gif" alt="Heart Animation" style="position: absolute; display: none">
         <button class="guzik" onclick="window.open('https://www.youtube.com')">BUY $AKALI</button>  
         <div class="nav-right">
-            <a class="zdjecie" href="#home" onclick="scrollToTop(event)">
+            <a class="zdjecie znikajacy" href="#home" onclick="scrollToTop(event)">
                 <img src="home_pic.webp" alt="Dooooomek">
             </a>
             <a class="zdjecie" href="https://x.com/home" target="_blank">
@@ -61,7 +61,6 @@
         </video> 
     </div>
     -->
-    <script src="script.js"></script>
     <div class="footer-container">
         <div class="footer">
             <div class="guziki">
@@ -78,6 +77,7 @@
             </div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
 
