navbar+footer reponsiveness

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
         </video> 
     </div>
     -->
+    <div id="sizeDisplay" style="position:fixed;top:10px;right:10px;background:black;color:white;padding:5px;font-size:14px;">
+        Window Size: <span id="windowSize"></span>
+    </div>
     <div class="footer-container">
         <div class="footer">
             <div class="guziki">
