finally added some media queries

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
             <a class="zdjecie znikajacy" href="#home" onclick="scrollToTop(event)">
                 <img src="home_pic.webp" alt="Dooooomek">
             </a>
-            <a class="zdjecie" href="https://x.com/home" target="_blank">
+            <a class="zdjecie zdjecie1" href="https://x.com/home" target="_blank">
                 <img src="x.avif" alt="x">
             </a>
-            <a class="zdjecie" href="https://www.instagram.com/akalinajpiekniejszakicia/" target="_blank">
+            <a class="zdjecie zdjecie1" href="https://www.instagram.com/akalinajpiekniejszakicia/" target="_blank">
                 <img src="insta.webp" alt="insta"> 
             </a>
-            <a class="zdjecie" href="https://web.telegram.org/a/" target="_blank">
+            <a class="zdjecie zdjecie1" href="https://web.telegram.org/a/" target="_blank">
                 <img src="telegram.webp" alt="telegram">
             </a>
         </div>
@@ -61,9 +61,6 @@
         </video> 
     </div>
     -->
-    <div id="sizeDisplay" style="position:fixed;top:10px;right:10px;background:black;color:white;padding:5px;font-size:14px;">
-        Window Size: <span id="windowSize"></span>
-    </div>
     <div class="footer-container">
         <div class="footer">
             <div class="guziki">
