--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
           </a>
       </div>
   </div>
+  <div class="arrow">
+    <img src="strzalka.png">
+  </div>
   <!-- Hero Section (from website 1) -->
   <div class="container" id="first-page">
     <section class="hero-section">
