--- a/index.html
+++ b/index.html
@@ -65,7 +65,12 @@
       </div>
     </section>
 </div>
-
+<!-- nowa sekcja testowanie-->
+<section id="launch-timer">
+  <h2 class="launch-title">OFFICIAL LAUNCH DATE 1.06.2025</h2>
+  <div id="timer"></div>
+  <a href="info.html" class="more-info">MORE INFO</a>
+</section>
 
   <!-- Białe pudełko -->
   <div class="container2" id="second-page">
@@ -101,6 +106,16 @@
         <img src="chilling2.jpg" alt="Akali in a forest">
         <img src="chilling3.jpg" alt="Akali on an autumn walk">
         <img src="chilling4.jpg" alt="Akali near a tree">
+      </section>
+      <section class="finisher">
+        <div class="left-col">
+          <div class="small-text">
+            For more beautiful photos<br>
+            check my social media!
+          </div>
+          <img class="green-heart" src="zielone_serce.png" alt="Green Heart">
+        </div>
+        <img class="akali-folder" src="akali_folder.png" alt="Cat">
       </section>
     </main>
   </div>
