--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
           <p>🐱 I am new to the memecoin community</p>
           <p>💻 I was created by a single developer.</p>
           <h3>About the Developer</h3>
-          <p>👨‍💻 I'm a 20-year-old IT student from Poland.</p>
-          <p>🚀 My goal? To beat <b>$DOGE</b> or hit <b>at least 1mil$ MC</b></p>
-          <p>🐾 I <b>believe</b> cats are superior to dogs! 😼</p>
+          <p>👨‍💻 I'm a 21-year-old IT student from Poland.</p>
+        <!--  <p>🚀 My goal? To beat <b>$DOGE</b> or hit <b>at least 1mil$ MC</b></p>
+          <p>🐾 I <b>believe</b> cats are superior to dogs! 😼</p> -->
           <p>🌟 This is my long-term project.</p>
-          <p>🛠 I started making this website on <b>Feb 1, 2025</b>.</p>
+         <!-- <p>🛠 I started making this website on <b>Feb 1, 2025</b>.</p>-->
           <p>🙏 I'd be <b>very grateful</b> for everyone who supports this journey! 🐈</p>
 
           <!-- Contract Address Section -->
@@ -67,7 +67,7 @@
 </div>
 <!-- nowa sekcja testowanie-->
 <section id="launch-timer">
-  <h2 class="launch-title">OFFICIAL LAUNCH DATE 1.06.2025</h2>
+  <h2 class="launch-title">OFFICIAL LAUNCH DATE 1.06.2026</h2>
   <div id="timer"></div>
   <a href="info.html" class="more-info">MORE INFO</a>
 </section>
@@ -140,3 +140,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
