--- a/extras.html
+++ b/extras.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="container">tekst</div>
-    <p>This is my only wallet fxxxxxxxxxxxx</p>
+    <p>This is my only wallet fxxxxxxxxxxxxxx</p>
     <p>I have put all of my savings into this coin</p>
     <p>I have some rules I will follow regarding this coin</p>
     <p>Firstly, I'm not selling ANY(kursywa) amount of the coin until we hit 200k mc</p>
